--- a/css/style.css
+++ b/css/style.css
@@ -3,30 +3,35 @@ html{
     font-size: 'Open Sans',Sans-serif;
 }
 html{
-    background-color:   #ccffff ;
+    background-color:  rgb(76, 0, 255);
 }
 body {
 width: 600px;
 margin: 0 auto;
 background-color: hsl(30, 100%, 50%);
-padding: 0 20px 20px 20px;
-border: 5px solid #80ff00;
+padding: 0 25px 20px 20px;
+border: 5px solid black;
 }
-
 h1 {
-
-text-align: center;
-margin: 0;
-padding: 20px 0;
-text-shadow: 1px 1px 1px blue;
-
+    text-align: center;
+    margin: 0;
+    padding: 20px 0;
+    text-shadow: 1px 1px 1px blue;
 }
-
 p {
-font-family: Arial, Helvetica, sans-serif;
-font-size: 16px;
-line-height: 1;
-letter-spacing: 0.5px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 1.5px;
+    }
+img
+    {
+   display: block;
+   margin: 0 auto 0 auto;
+  width: 25%;
+    
+    }
 
 
-}
+
+
