--- a/css/styleOne.css
+++ b/css/styleOne.css
@@ -1,6 +1,6 @@
 body{
     background-repeat: no-repeat; 
-	background-image: url("/assets/Image1.jpg");
+	background-image: url("...assets/Image1.jpg");
     width: 80px;
     height: 105vh;
     background-size: contain;
